--- a/config/train/dynamic_compression.yml
+++ b/config/train/dynamic_compression.yml
@@ -2,7 +2,7 @@
 # Custom NAFNet Config for On-the-Fly Compressed Synthetic Dataset
 # ------------------------------------------------------------------------
 
-name: Testing_8x
+name: Testing_8x_L1_02
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 1
@@ -15,7 +15,7 @@ datasets:
     target_dir: /home/vk38/E2E-Photoacoustic-CS/datasets/Synthetic/25x_Averaged/Original/data_split/train
     upsample_type: learned
     normalize: true
-    noise_std: 0.01
+    noise_std: 0.02
     reshape_to_image: true
     num_worker_per_gpu: 1
     batch_size_per_gpu: 8
@@ -31,7 +31,7 @@ datasets:
     target_dir: /home/vk38/E2E-Photoacoustic-CS/datasets/Synthetic/25x_Averaged/Original/data_split/val
     upsample_type: learned
     normalize: true
-    noise_std: 0.01
+    noise_std: 0.02
     reshape_to_image: true
     num_worker_per_gpu: 1
     batch_size_per_gpu: 100
@@ -96,7 +96,7 @@ train:
   warmup_iter: -1
 
   pixel_opt:
-    type: MSELoss
+    type: L1Loss
     loss_weight: 1
     reduction: mean
 
@@ -105,6 +105,10 @@ val:
   save_img: false
   use_image: false
   metrics:
+    l1:
+      type: calculate_l1
+      crop_border: 0
+      test_y_channel: false
     mse:
       type: calculate_mse
       crop_border: 0
@@ -116,6 +120,10 @@ val:
 
 test:
   metrics:
+    l1:
+      type: calculate_l1
+      crop_border: 0
+      test_y_channel: false
     mse:
       type: calculate_mse
       crop_border: 0
